# libaiff-rust

./: Cargo.toml  README.md  build.rs  noise.aiff  wrapper.h
src/: bindings.rs  lib.rs
