[package]
name = "libaiff-rust"
version = "0.1.0"
authors = ["Marekkon5"]
edition = "2018"
exclude = ["libaiff/**", "noise.aiff"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.0"

[build-dependencies]
bindgen = "0.57"